# System_Programming

./: shm_file_demo.c
Demo/: output.txt  shm_file_demo  shm_file_demo.c
src/: Makefile  Readme  cleanup  cleanup.c  imgui.ini  input.txt  output.txt  reader  reader.c  script.txt  shared.h  writer  writer.c
src/gui_cpp/: CMakeLists.txt  README.md  imgui.ini  install_deps.sh  main.cpp
